Overflow solved around 400 px

--- a/src/Components/ProductSwiper/swiper.css
+++ b/src/Components/ProductSwiper/swiper.css
@@ -36,6 +36,6 @@
   background-color: #eca3a3;
 }
 
-/* *{
-  border:1px solid black;
-} */
+*{
+  /* border:1px solid black; */
+}
